--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-OPENAI_DEPLOYMENT_ENDPOINT ="https://chatbot-nano.openai.azure.com/" 
-OPENAI_API_KEY ="d32901789bb6432e811a7395610def97"
+OPENAI_DEPLOYMENT_ENDPOINT ="endpoint" 
+OPENAI_API_KEY ="key"
 OPENAI_DEPLOYMENT_NAME ="gpt35turbo"
 OPENAI_DEPLOYMENT_VERSION ="2023-03-15-preview"
 OPENAI_MODEL_NAME ="gpt-35-turbo"
